Update SonarQube configuration by modifying project key and adding organization details in sonar-project.properties for better project tracking and management.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=pg-crud-api
+sonar.projectKey=EduQuest-dev_pg-crud-api
+sonar.organization=eduquest-dev
 sonar.projectName=pg-crud-api
 
 sonar.sources=src
